--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<B> About Me </b><BR>
 				<p>
 					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
-					at Albany, State University of New York. My research interests include <br />Cryptography, Security, Multimedia
+					at Albany, State University of New York (SUNY). My research interests include <br />Cryptography, Security, Multimedia
 					Security and Forensics. I am currently working on
 					projects in the areas of encrypted domain processing of data over cloud, 
 					secure <br />communication protocols in cloud systems, gaze detection and correction,
@@ -113,14 +113,12 @@
 			<div class="container">
 				<b> Academic Background </b> 
 				<ul>
-					<li>Ph.D. Computer Science , University at Albany, State
-						University of New York, Albany , NY (August 2017 - Present )</li>
-					<li>MS Computer Science,University at Albany, State University
-						of New York, Albany , NY (August 2015 - December 2016)</li>
-					<li>B. Tech Computer Science, Amity University, India, (August
+					<li>Ph.D. Computer Science , University at Albany, SUNY, Albany , NY (August 2017 - Present )</li>
+					<li>M.S. Computer Science, University at Albany, SUNY, Albany , NY (August 2015 - December 2016)</li>
+					<li>B.Tech. Computer Science, Amity University, India, (August
 						2008 - May 2012).</li>
 				</ul>
-				<br /> <br /> <b>Work Experience</b>
+				<br /> <b>Work Experience</b>
 				<ul>
 					<li>Past Experience
 						<ul>
@@ -138,8 +136,8 @@
 					<li>S Arora, PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
 					Transactions on Dependable and <br />Secure Computing (TSDC)
 					</li>
-					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, Submitted to The 5th IEEE International 
-						Conference <br />on Multimedia Information Processing and Retrieval (MIPR), 2022
+					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, The 5th IEEE International 
+						Conference <br />on Multimedia Information Processing and Retrieval (MIPR), 2022 (To Appear)
 					</li>
 					<li>S Arora, PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9648395">
