--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<dt>Research Lab</dt>
 
 								<dd>
-									<a href="http://www.cs.albany.edu/ALPS/"> ALPS Lab</a>,
-									Department of Computer Science, UAB 419,<BR> 1215 Western
+									<a href="http://www.cs.albany.edu/ALPS/"> Albany Lab for Privacy and Security</a>
+									<br/>Department of Computer Science <BR> University at Albany, State University of New York (SUNY), <br />UAB 419, 1215 Western
 									Avenue,<BR> Albany, NY, 12222
 								</dd>
 
@@ -84,7 +84,7 @@
 				<B> About Me </b><BR>
 				<p>
 					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
-					at Albany, State University of New York (SUNY). My research interests include <br />Cryptography, Security, Multimedia
+					at Albany, SUNY. My research interests include <br />Cryptography, Security, Multimedia
 					Security and Forensics. I am currently working on
 					projects in the areas of encrypted domain processing of data over cloud, 
 					secure <br />communication protocols in cloud systems, gaze detection and correction,
