--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 					</div>
 					<!--Details -->
-					<div class="col-sm-5">
+					<div class="col-sm-6">
 
 
 						<div class="row">
@@ -54,12 +54,12 @@
 								<dd>
 									<a href="http://www.cs.albany.edu/ALPS/"> Albany Lab for Privacy and Security</a>
 									<br/>Department of Computer Science <BR> University at Albany, State University of New York (SUNY), <br />UAB 419, 1215 Western
-									Avenue,<BR> Albany, NY, 12222
+									Avenue,<BR> Albany, NY 12222 USA
 								</dd>
 
 								<dt>Email</dt>
 
-								<dd>sarora3 [at] albany [dot] edu</dd>
+								<dd>sarora3 [at] albany [dot] edu, shashankarora105 [at ]gmail [dot] com</dd>
 								<dt>Links</dt>
 
 								<dd>
