--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 				<B> About Me </b><BR>
 				<p>
 					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
-					at Albany, SUNY. My research interests include <br />Cryptography, Security, Multimedia
+					at Albany, SUNY. My research interests include Applied Cryptography, Security, <br />Multimedia
 					Security and Forensics. I am currently working on
 					projects in the areas of encrypted domain processing of data over cloud, 
-					secure <br />communication protocols in cloud systems, gaze detection and correction,
+					secure communication protocols in cloud systems, gaze detection and correction,
 					analysis of facial expressions and digital forensics. I am working with <a
 						href="http://www.cs.albany.edu/~patrey/">Prof. Pradeep Atrey</a>
-					at the <br />University at Albany, SUNY.
+					at the University at Albany, SUNY.
 				</p>
 			</div>
 			<BR>
