--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 								<dt>Email</dt>
 
-								<dd>sarora3 [at] albany [dot] edu, shashankarora105 [at ]gmail [dot] com</dd>
+								<dd>sarora3 [at] albany [dot] edu, shashankarora105 [at] gmail [dot] com</dd>
 								<dt>Links</dt>
 
 								<dd>
@@ -84,8 +84,8 @@
 				<B> About Me </b><BR>
 				<p>
 					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
-					at Albany, SUNY. My research interests include Applied Cryptography, Security, <br />Multimedia
-					Security and Forensics. I am currently working on
+					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security, Multimedia
+					Computing and Forensics. I am currently working on
 					projects in the areas of encrypted domain processing of data over cloud, 
 					secure communication protocols in cloud systems, gaze detection and correction,
 					analysis of facial expressions and digital forensics. I am working with <a
