--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 								<dd>
 									<a href="http://www.cs.albany.edu/ALPS/"> Albany Lab for Privacy and Security</a>
-									<br/>Department of Computer Science <BR> University at Albany, State University of New York (SUNY), <br />UAB 419, 1215 Western
-									Avenue,<BR> Albany, NY 12222 USA
+									<br/>Department of Computer Science <BR> University at Albany, State University of New York (SUNY) <br />UAB 419, 1215 Western
+									Avenue<BR> Albany, NY 12222 USA
 								</dd>
 
 								<dt>Email</dt>
@@ -86,8 +86,8 @@
 					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
 					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security, Multimedia
 					Computing and Forensics. I am currently working on
-					projects in the areas of encrypted domain processing of data over cloud, 
-					secure communication protocols in cloud systems, gaze detection and correction,
+					projects in the areas of secure processing & editing of data over cloud, 
+					secure communication protocols in cloud systems, gaze detection and correction in group images,
 					analysis of facial expressions and digital forensics. I am working with <a
 						href="http://www.cs.albany.edu/~patrey/">Prof. Pradeep Atrey</a>
 					at the University at Albany, SUNY.
