--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security, Multimedia
 					Computing and Forensics. I am currently working on
 					projects in the areas of secure processing & editing of data over cloud, 
-					secure communication protocols in cloud systems, gaze detection and correction in group images,
-					analysis of facial expressions and digital forensics. I am working with <a
+					secure communication protocols in cloud systems and gaze detection and correction in group images. I am working with <a
 						href="http://www.cs.albany.edu/~patrey/">Prof. Pradeep Atrey</a>
 					at the University at Albany, SUNY.
 				</p>
@@ -171,10 +170,13 @@
 				<b>Current Projects</b>
 				<ul>
 					<li><b><a
-						href="sec_collab_edit.html">Secure Collaborative and Concurrent Editing</a></b>
+						href="sec_collab_edit.html">SecureCEdit: Secure Collaborative and Concurrent Editing</a></b>
 					</li>
 					<li><b><a
-						href="gaze_select.html">Gaze-Aware Representative Group Image Selection</a></b>
+						href="gaze_select.html">GARGI: Gaze-Aware Representative Group Image Selection</a></b>
+					</li>
+					<li><b><a
+						href="gaze_select.html">SecureCMail: Securing Emails from Service Providers</a></b>
 					</li>
 				</ul>
 			</div>
