--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 			<div class="container">
 				<b> Academic Background </b> 
 				<ul>
-					<li>Ph.D. Computer Science, University at Albany, SUNY, Albany, NY (August 2017 - Present )</li>
-					<li>M.S. Computer Science, University at Albany, SUNY, Albany, NY (August 2015 - December 2016)</li>
+					<li>Ph.D. Computer Science, University at Albany, SUNY, USA (August 2017 - Present )</li>
+					<li>M.S. Computer Science, University at Albany, SUNY, USA (August 2015 - December 2016)</li>
 					<li>B.Tech. Computer Science, Amity University, India (August 2008 - May 2012).</li>
 				</ul>
 				<br /> <b>Work Experience</b>
