--- a/index.html
+++ b/index.html
@@ -118,11 +118,7 @@
 				</ul>
 				<br /> <b>Work Experience</b>
 				<ul>
-					<li>Past Experience
-						<ul>
-							<li>Wipro Technologies, Software Engineer, Hyderabad, India
-								(September 2012 - June 2015)</li>
-						</ul>
+					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)
 					</li>
 				</ul>
 			</div>
