--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 				</ul>
 				<br /> <b>Work Experience</b>
 				<ul>
-					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)
-					</li>
+					<li>Teaching Assistant, University at Albany, SUNY, USA (August 2017 - Present)</li>
+					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)</li>
 				</ul>
 			</div>
 			<BR>
