--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 					</li>
 					<li>P Singh, S Arora, K Williamson, PK Atrey. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/8122941/">S3Email:
-								A method for securing emails from service providers</a></b>, IEEE
+								A Method for Securing Emails from Service Providers</a></b>, IEEE
 						International Conference on <BR>Systems, Man, and Cybernetics
 						(SMC), 2017
 					</li>
 					<li>S Arora, G Varshney, PK Atrey, M Mishra. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
-								An approach for secure cloud-based document editing</a></b> IEEE
+								An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
 						Conference on <br>Communications and Network Security (CNS),
 						2016</li>
 				</ul>
