--- a/index.html
+++ b/index.html
@@ -127,36 +127,35 @@
 			<div class="container">
 				<b>Publications</b>
 				<ul>
-					<li>S Arora, PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
+					<li>S Arora and PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
 					Transactions on Dependable and <br />Secure Computing (TSDC)
 					</li>
 					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, The 5th IEEE International 
-						Conference <br />on Multimedia Information Processing and Retrieval (MIPR), 2022 (To Appear)
+						Conference <br />on Multimedia Information Processing and Retrieval (MIPR), San Jose, USA, August 2022 (To Appear)
 					</li>
-					<li>S Arora, PK Atrey. <b><a
+					<li>S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9648395">
-						Secure Collaborative Editing Using Secret Sharing</a></b>, IEEE International Workshop on Information Forensics and Security (WIFS), 2021 <br />
+						Secure Collaborative Editing Using Secret Sharing</a></b>, IEEE International Workshop on Information Forensics and Security (WIFS), Montpellier, France, December 2021
 					</li>
 					<li>G Kodwani, S Arora, PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9527961/">
-						On Security of Key Derivation Functions in Password-based Cryptography</a></b>, IEEE International Conference <br />
-						 on Cyber Security and Resilience (CSR), 2021 
+						On Security of Key Derivation Functions in Password-based Cryptography</a></b>, IEEE International Conference on Cyber Security and Resilience (CSR), July 2021 
 					</li>
-					<li>O Kulkarni, V Patil, SB Parikh, S Arora, PK Atrey. <b><a
+					<li>O Kulkarni, V Patil, SB Parikh, S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9327911/">
-						Can You All Look Here? Towards Determining Gaze Uniformity In Group Images</a></b>, IEEE International Symposium on Multimedia (ISM), 2020 
+						Can You All Look Here? Towards Determining Gaze Uniformity In Group Images</a></b>, IEEE International Symposium on Multimedia (ISM), Tapei, Taiwan, December 2020 
 					</li>
-					<li>P Singh, S Arora, K Williamson, PK Atrey. <b><a
+					<li>P Singh, S Arora, K Williamson and PK Atrey. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/8122941/">S3Email:
 								A Method for Securing Emails from Service Providers</a></b>, IEEE
 						International Conference on <BR>Systems, Man, and Cybernetics
-						(SMC), 2017
+						(SMC), Banff, Canada, October 2017
 					</li>
-					<li>S Arora, G Varshney, PK Atrey, M Mishra. <b><a
+					<li>S Arora, G Varshney, PK Atrey and M Mishra. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
 								An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
 						Conference on <br>Communications and Network Security (CNS),
-						2016</li>
+						Philedelphia, PA, USA, October 2016</li>
 				</ul>
 			</div>
 			<BR>
