--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					</li>
 					<li>G Kodwani, S Arora, PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9527961/">
-						On Security of Key Derivation Functions in Password-based Cryptography</a></b>, IEEE International Conference on Cyber Security and Resilience (CSR), July 2021 
+						On Security of Key Derivation Functions in Password-based Cryptography</a></b>, IEEE International Conference on Cyber Security and Resilience (CSR), Virtual, July 2021 
 					</li>
 					<li>O Kulkarni, V Patil, SB Parikh, S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9327911/">
