--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						href="https://ieeexplore.ieee.org/abstract/document/9648395">
 						Secure Collaborative Editing Using Secret Sharing</a></b>, IEEE International Workshop on Information Forensics and Security (WIFS), Montpellier, France, December 2021
 					</li>
-					<li>G Kodwani, S Arora, PK Atrey. <b><a
+					<li>G Kodwani, S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9527961/">
 						On Security of Key Derivation Functions in Password-based Cryptography</a></b>, IEEE International Conference on Cyber Security and Resilience (CSR), Virtual, July 2021 
 					</li>
@@ -151,7 +151,7 @@
 						International Conference on <BR>Systems, Man, and Cybernetics
 						(SMC), Banff, Canada, October 2017
 					</li>
-					<li>S Arora, G Varshney, PK Atrey and M Mishra. <b><a
+					<li>S Arora, G Varshney, PK Atrey and M Misra. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
 								An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
 						Conference on <br>Communications and Network Security (CNS),
