--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
 				</ul>
 				
 			</div>
+			<div class="container">
+				<b>Hobbies</b>
+				<ul>
+					<li>CSI 201: Introduction to Computer Science (Fall 2017, Fall 2019, Fall 2021, Summer 2022)</li>
+					<li>CSI 210: Discrete Structures (Fall 2020)</li>
+					<li>CSI 213: Data Structures (Summer 2021)</li>
+					<li>CSI 311: Principles of Programming Languages (Spring 2018, Fall 2018)</li>
+					<li>CSI 404: Computer Organization (Spring 2019, Fall 2020, Spring 2022)</li>
+					<li>CSI 409: Automata and Formal Languages (Spring 2020)</li>
+					<li>CSI 412: Operating Systems (Fall 2020)</li>
+					<li>CSI 499: Capstone Project in Computer Science (Spring 2020, Fall 2021, Spring 2022)</li>
+					<li>CSI 426/526: Cryptography (Spring 2018, Spring 2019, Spring 2020, Spring 2021)</li>
+					<li>CSI 433/533: Multimedia Computing (Fall 2019)</li>
+					<li>CSI 499: Capstone Project in Computer Science (Spring 2020, Spring 2021, Fall 2021, Spring 2022)</li>
+				</ul>
+				
+			</div>
 		</div>
 	</div>
 </body>
