--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>p,ul {
+	padding-right: 30px;
+}</style>
 <title>Shashank Arora</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +39,7 @@
 
 					</div>
 					<!--Details -->
-					<div class="col-sm-6">
+					<div class="col-sm-8">
 
 
 						<div class="row">
@@ -119,6 +122,7 @@
 				<br /> <b>Work Experience</b>
 				<ul>
 					<li>Teaching Assistant, University at Albany, SUNY, USA (August 2017 - Present)</li>
+					<li>Student Research Assistant, University at Albany, SUNY, USA (January 2016 - May 2017)</li>
 					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)</li>
 				</ul>
 			</div>
@@ -128,10 +132,10 @@
 				<b>Publications</b>
 				<ul>
 					<li>S Arora and PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
-					Transactions on Dependable and <br />Secure Computing (TSDC)
+					Transactions on Dependable and Secure Computing (TSDC)
 					</li>
 					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, The 5th IEEE International 
-						Conference <br />on Multimedia Information Processing and Retrieval (MIPR), San Jose, USA, August 2022 (To Appear)
+						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, USA, August 2022 (To Appear)
 					</li>
 					<li>S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9648395">
@@ -148,13 +152,13 @@
 					<li>P Singh, S Arora, K Williamson and PK Atrey. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/8122941/">S3Email:
 								A Method for Securing Emails from Service Providers</a></b>, IEEE
-						International Conference on <BR>Systems, Man, and Cybernetics
+						International Conference on Systems, Man, and Cybernetics
 						(SMC), Banff, Canada, October 2017
 					</li>
 					<li>S Arora, G Varshney, PK Atrey and M Misra. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
 								An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
-						Conference on <br>Communications and Network Security (CNS),
+						Conference on Communications and Network Security (CNS),
 						Philedelphia, PA, USA, October 2016</li>
 				</ul>
 			</div>
@@ -193,22 +197,16 @@
 				</ul>
 				
 			</div>
+			<BR>
 			<div class="container">
-				<b>Hobbies</b>
-				<ul>
-					<li>CSI 201: Introduction to Computer Science (Fall 2017, Fall 2019, Fall 2021, Summer 2022)</li>
-					<li>CSI 210: Discrete Structures (Fall 2020)</li>
-					<li>CSI 213: Data Structures (Summer 2021)</li>
-					<li>CSI 311: Principles of Programming Languages (Spring 2018, Fall 2018)</li>
-					<li>CSI 404: Computer Organization (Spring 2019, Fall 2020, Spring 2022)</li>
-					<li>CSI 409: Automata and Formal Languages (Spring 2020)</li>
-					<li>CSI 412: Operating Systems (Fall 2020)</li>
-					<li>CSI 499: Capstone Project in Computer Science (Spring 2020, Fall 2021, Spring 2022)</li>
-					<li>CSI 426/526: Cryptography (Spring 2018, Spring 2019, Spring 2020, Spring 2021)</li>
-					<li>CSI 433/533: Multimedia Computing (Fall 2019)</li>
-					<li>CSI 499: Capstone Project in Computer Science (Spring 2020, Spring 2021, Fall 2021, Spring 2022)</li>
-				</ul>
-				
+				<b>Hobbies and Interests</b>
+				<p>
+				In my spare time, I like to read fiction novels. I've been working on <a href="https://www.goodreads.com/series/41526-the-wheel-of-time">The Wheel of Time</a> 
+				series for an embarrassingly  long amount of time. I'm on book 12, The Gathering Storm, right now. If I'm not reading, I try to practice playing guitar as much as I can
+				to try to keep my passion for music alive. I also try to keep up to date with the latest Metal and Rock releases and try to attend as many concerts as I can. 
+				I've been playing guitar for almost 15 years now. Once a week, I tune into the Critical Role D&D stream. Although I've never played D&D myself, I find the interactive 
+				storytelling fascinating. 
+				</p>
 			</div>
 		</div>
 	</div>
