--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
 								An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
 						Conference on Communications and Network Security (CNS),
-						Philedelphia, PA, USA, October 2016</li>
+						Philadelphia, PA, USA, October 2016</li>
 				</ul>
 			</div>
 			<BR>
