--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 									<a
 										href="https://scholar.google.com/citations?user=42x_uzAAAAAJ&hl=en">Google
 										Scholar</a>, <a
-										href="https://www.linkedin.com/in/shashank-arora-9750b27a/">LinkedIn</a>
+										href="https://www.linkedin.com/in/shashank-arora-9750b27a/">LinkedIn</a>,
+										<a
+										href="Resume.pdf">Resume</a>
 								</dd>
 
 							</dl>
