--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					Transactions on Dependable and Secure Computing (TSDC)
 					</li>
 					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, The 5th IEEE International 
-						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, USA, August 2022 (To Appear)
+						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, CA, USA, August 2022 (To Appear)
 					</li>
 					<li>S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9648395">
@@ -149,13 +149,13 @@
 					</li>
 					<li>O Kulkarni, V Patil, SB Parikh, S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9327911/">
-						Can You All Look Here? Towards Determining Gaze Uniformity In Group Images</a></b>, IEEE International Symposium on Multimedia (ISM), Tapei, Taiwan, December 2020 
+						Can You All Look Here? Towards Determining Gaze Uniformity In Group Images</a></b>, IEEE International Symposium on Multimedia (ISM), Taipei, Taiwan, December 2020 
 					</li>
 					<li>P Singh, S Arora, K Williamson and PK Atrey. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/8122941/">S3Email:
 								A Method for Securing Emails from Service Providers</a></b>, IEEE
 						International Conference on Systems, Man, and Cybernetics
-						(SMC), Banff, Canada, October 2017
+						(SMC),  Banff, AB, Canada, October 2017
 					</li>
 					<li>S Arora, G Varshney, PK Atrey and M Misra. <b><a
 							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
