--- a/gaze_select.html
+++ b/gaze_select.html
@@ -36,7 +36,7 @@
 			<div class="container">
 
 				<h2>
-					<div class="text-center">Gaze-Aware Representative Group Image Selection</div>
+					<div class="text-center">GARGI: Gaze-Aware Representative Group Image Selection</div>
 				</h2>
 				<h2>
 					<div class="text-center">
@@ -90,11 +90,11 @@
 				<b>Publications</b>
 				<ul>
 					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, The 5th IEEE International 
-						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, USA, August 2022 (To Appear)
+						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, CA, USA, August 2022 (To Appear)
 					</li>
 					<li>O Kulkarni, V Patil, SB Parikh, S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9327911/">
-						Can You All Look Here? Towards Determining Gaze Uniformity In Group Images</a></b>, IEEE International Symposium on Multimedia (ISM), Tapei, Taiwan, December 2020 
+						Can You All Look Here? Towards Determining Gaze Uniformity In Group Images</a></b>, IEEE International Symposium on Multimedia (ISM), Taipei, Taiwan, December 2020 
 					</li>
 				</ul>
 			</div>
