--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						href="gaze_select.html">GARGI: Gaze-Aware Representative Group Image Selection</a></b>
 					</li>
 					<li><b><a
-						href="gaze_select.html">SecureCMail: Securing Emails from Service Providers</a></b>
+						href="sec_mail.html">SecureCMail: Securing Emails from Service Providers</a></b>
 					</li>
 				</ul>
 			</div>
