--- a/sec_collab_edit.html
+++ b/sec_collab_edit.html
@@ -36,7 +36,7 @@
 			<div class="container">
 
 				<h2>
-					<div class="text-center">Secure Collaborative and Concurrent Editing</div>
+					<div class="text-center">SecureCEdit: Secure Collaborative and Concurrent Editing</div>
 				</h2>
 				<h2>
 					<div class="text-center">
@@ -102,16 +102,16 @@
 				<ul>
 					<li>S Arora and PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
 						Transactions on Dependable and Secure Computing (TSDC)
-						</li>
-						<li>S Arora and PK Atrey. <b><a
-							href="https://ieeexplore.ieee.org/abstract/document/9648395">
-							Secure Collaborative Editing Using Secret Sharing</a></b>, IEEE International Workshop on Information Forensics and Security (WIFS), Montpellier, France, December 2021
-						</li>
-						<li>S Arora, G Varshney, PK Atrey and M Misra. <b><a
-							href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
-								An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
-						Conference on Communications and Network Security (CNS),
-						Philedelphia, PA, USA, October 2016</li>
+					</li>
+					<li>S Arora and PK Atrey. <b><a
+						href="https://ieeexplore.ieee.org/abstract/document/9648395">
+						Secure Collaborative Editing Using Secret Sharing</a></b>, IEEE International Workshop on Information Forensics and Security (WIFS), Montpellier, France, December 2021
+					</li>
+					<li>S Arora, G Varshney, PK Atrey and M Misra. <b><a
+						href="http://ieeexplore.ieee.org/abstract/document/7860548/">SecureCEdit:
+							An Approach for Secure Cloud-based Document Editing</a></b>, IEEE
+					Conference on Communications and Network Security (CNS),
+					Philadelphia, PA, USA, October 2016</li>
 				</ul>
 			</div>
 			<BR>
