--- a/sec_collab_edit.html
+++ b/sec_collab_edit.html
@@ -39,8 +39,9 @@
 					<div class="text-center">SecureCEdit: Secure Collaborative and Concurrent Editing</div>
 				</h2>
 				<h2>
+
 					<div class="text-center">
-						<img src="SecureC2Edit_AES.png" class="rounded mx-auto d-block">
+						<img src="Evil_Cloud.jpg" class="rounded mx-auto d-block" width = "600">
 
 					</div>
 				</h2>
@@ -66,6 +67,12 @@
 			<div class="container">
 
 				<B> Key Contributions </b><BR>
+					
+					<div class="text-center">
+						<img src="SecureC2Edit_AES.png" class="rounded mx-auto d-block">
+
+					</div>
+					<BR />
 				<p>
 					To that end, this work proposes a suite of frameworks, SecureCEdit and two variations of SecureC2Edit to secure user data 
 					and enable co-authors of collaborative documents to keep their data confidential while providing collaborative editing services.
