--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<B> About Me </b><BR>
 				<p>
 					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
-					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security, Multimedia
+					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security and Privacy, Multimedia
 					Computing and Forensics. I am currently working on
 					projects in the areas of secure processing & editing of data over cloud, 
 					secure communication protocols in cloud systems and gaze detection and correction in group images. I am working with <a
