--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 				<B> About Me </b><BR>
 				<p>
-					Hello! My name is Shashank Arora, and I am a Ph.D. candidate in Computer Science at University
-					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security and Privacy, Multimedia
+					Hello! My name is Shashank Arora, and I am a Ph.D. in Computer Science from University
+					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security, Multimedia
 					Computing and Forensics. I am currently working on
 					projects in the areas of secure processing & editing of data over cloud, 
 					secure communication protocols in cloud systems and gaze detection and correction in group images. I am working with <a
@@ -117,12 +117,13 @@
 			<div class="container">
 				<b> Academic Background </b> 
 				<ul>
-					<li>Ph.D. Computer Science, University at Albany, SUNY, USA (August 2017 - Present )</li>
+					<li>Ph.D. Computer Science, University at Albany, SUNY, USA (August 2017 - December 2022 )</li>
 					<li>M.S. Computer Science, University at Albany, SUNY, USA (August 2015 - December 2016)</li>
 					<li>B.Tech. Computer Science, Amity University, India (August 2008 - May 2012).</li>
 				</ul>
 				<br /> <b>Work Experience</b>
 				<ul>
+					<li>Research Assistant, University at Albany, SUNY, USA (October 2022 - Present)</li>
 					<li>Teaching Assistant, University at Albany, SUNY, USA (August 2017 - Present)</li>
 					<li>Student Research Assistant, University at Albany, SUNY, USA (January 2016 - May 2017)</li>
 					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)</li>
@@ -136,8 +137,10 @@
 					<li>S Arora and PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
 					Transactions on Dependable and Secure Computing (TSDC)
 					</li>
-					<li>O Kulkarni, S Arora and PK Atrey. <b>GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</b>, The 5th IEEE International 
-						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, CA, USA, August 2022 (To Appear)
+					<li>O Kulkarni, S Arora and PK Atrey.<b><a
+						href="https://ieeexplore.ieee.org/abstract/document/9874655">
+						GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</a></b>, The 5th IEEE International 
+						Conference on Multimedia Information Processing and Retrieval (MIPR), San Jose, CA, USA, August 2022
 					</li>
 					<li>S Arora and PK Atrey. <b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9648395">
