--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<br /> <b>Work Experience</b>
 				<ul>
 					<li>Research Assistant, University at Albany, SUNY, USA (October 2022 - Present)</li>
-					<li>Teaching Assistant, University at Albany, SUNY, USA (August 2017 - Present)</li>
+					<li>Teaching Assistant, University at Albany, SUNY, USA (August 2017 - July 2022)</li>
 					<li>Student Research Assistant, University at Albany, SUNY, USA (January 2016 - May 2017)</li>
 					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)</li>
 				</ul>
