--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
 				<B> About Me </b><BR>
 				<p>
-					Hello! My name is Shashank Arora, and I am a Ph.D. in Computer Science from University
+					Hello! My name is Shashank Arora, and I am currently a faculty at University
+					at Albany, SUNY. I have a Ph.D. in Computer Science from the University
 					at Albany, SUNY. My research interests include Applied Cryptography, Cloud Security, Multimedia
 					Computing and Forensics. I am currently working on
 					projects in the areas of secure processing & editing of data over cloud, 
@@ -123,7 +124,8 @@
 				</ul>
 				<br /> <b>Work Experience</b>
 				<ul>
-					<li>Research Assistant, University at Albany, SUNY, USA (October 2022 - Present)</li>
+					<li>Faculty, University at Albany, SUNY, USA (August 2023 - Present)</li>
+					<li>Research Assistant, University at Albany, SUNY, USA (October 2022 - July 2023)</li>
 					<li>Teaching Assistant, University at Albany, SUNY, USA (August 2017 - July 2022)</li>
 					<li>Student Research Assistant, University at Albany, SUNY, USA (January 2016 - May 2017)</li>
 					<li>Software Engineer, Wipro Technologies, Hyderabad, India (September 2012 - June 2015)</li>
@@ -134,9 +136,12 @@
 			<div class="container">
 				<b>Publications</b>
 				<ul>
-					<li>S Arora and PK Atrey. <b>SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</b>, Submitted to IEEE
+					<li>S Arora and PK Atrey. <b><a href="https://ieeexplore.ieee.org/abstract/document/10210084">SecureC2Edit: A Framework for Secure Collaborative and Concurrent Document Editing</a></b>, IEEE
 					Transactions on Dependable and Secure Computing (TSDC)
 					</li>
+					<li>O Kulkarni, S Arora, A Mishra, VK Singh and PK Atrey.<b><a
+						href="https://ieeexplore.ieee.org/abstract/document/10254439">
+						A Multi-stage Bias Reduction Framework for Eye Gaze Detection</a></b>, The 6th IEEE International Conference on Multimedia Information Processing and Retrieval (MIPR), Singapore, September 2023
 					<li>O Kulkarni, S Arora and PK Atrey.<b><a
 						href="https://ieeexplore.ieee.org/abstract/document/9874655">
 						GARGI: Selecting Gaze-Aware Representative Group Image from a Live Photo</a></b>, The 5th IEEE International 
@@ -185,6 +190,15 @@
 			</div>
 			<BR>
 			<!--Teaching Section -->
+			<div class="container">
+				<b>Teaching</b>
+				<ul>
+					<li>CSI 409/509: Automata and Formal Languages (Fall 2023)</li>
+					<li>CSI 518: Software Engineering (Fall 2023)</li>
+				</ul>
+				
+			</div>
+			<BR>
 			<div class="container">
 				<b>Teaching Assistant</b>
 				<ul>
